# hsporter

./: .todo  LICENSE  Main.hs  README  README.md  categories.conf  core.conf  ghc.conf  hsporter.cabal  hsupdater.conf.sample  platform.conf
Distribution/FreeBSD/: Common.hs  Port.hs  Update.hs
src-hsporter/: Main.hs
src-hsupdater/: Main.hs
