name:           hsporter
version:        0.0.1
license:        BSD3
license-file:   LICENSE
author:         Gabor Pali
maintainer:     FreeBSD Haskell <haskell@FreeBSD.org>
homepage:       http://github.com/freebsd-haskell/hsporter/
description:    A simple tool written for briding between Cabal
                packages and the FreeBSD Ports Collection.  It
                turns Cabal package descriptions into FreeBSD ports
                without requiring further manual tweaking.
synopsis:       Create FreeBSD ports from Cabal packages
category:       Distribution
stability:      experimental
build-type:     Simple
cabal-version:  >= 1.2
tested-with:    GHC == 7.0.3

executable hsporter
    main-is:            Main.hs
    ghc-options:        -Wall

    build-depends:
        base >= 4,
        bytestring,
        containers,
        directory,
        filepath,
        old-time,
        tar,
        zlib,
        SHA,
        Cabal,
        HTTP,
        network,
        text
