name:           hsporter
version:        0.0.1
license:        BSD3
license-file:   LICENSE
author:         Gabor Pali
maintainer:     FreeBSD Haskell <haskell@FreeBSD.org>
homepage:       http://github.com/freebsd-haskell/hsporter/
description:    A simple tool written for briding between Cabal
                packages and the FreeBSD Ports Collection.  It
                turns Cabal package descriptions into FreeBSD ports
                without requiring further manual tweaking.
synopsis:       Create FreeBSD ports from Cabal packages
category:       Distribution
stability:      experimental
build-type:     Simple
cabal-version:  >= 1.2
tested-with:    GHC == 7.0.4

data-files:
  core.conf
  categories.conf
  platform.conf
  hsupdater.conf.sample

library
  exposed-modules:
    Distribution.FreeBSD.Port

  build-depends:
    base,
    old-time == 1.0.*,
    filepath == 1.2.*,
    network == 2.3.*,
    HTTP == 4000.1.*,
    Cabal == 1.10.*,
    text == 0.11.*,
    containers == 0.4.*,
    SHA == 1.5.*,
    bytestring == 0.9.*,
    zlib == 0.5.*,
    tar == 0.3.*

executable hsporter
  main-is: src-hsporter/Main.hs

  build-depends:
    directory == 1.1.*

executable hsupdater
  main-is: src-hsupdater/Main.hs
